--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
       
-       <a class="centered bn49" href="/">Let's get started</a>
+       <a class="centered bn49" href="/">Checkout here</a>
     </div>
     </div>
     </div>
